# FOPMixins

./: CMakeLists.txt  README.md  main.cpp
Base/: BaseEdge.cpp  BaseEdge.h  BaseGraph.cpp  BaseGraph.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
Hierholzer/: HierholzerGraph.cpp  HierholzerGraph.h
Weighted/: WeightedEdge.h
